# apparatus

./: README.md  pyproject.toml
apparatus/: __init__.py
tests/: test_fileMutex.py  test_get_slope.py  test_valmap.py
